--- a/cluster1-lbghf/tenants/myapp/kustomization.yaml
+++ b/cluster1-lbghf/tenants/myapp/kustomization.yaml
@@ -2,5 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- core-components-appset.yaml
-- tenants-appset.yaml
+- myapp-deployment.yaml
+- myapp-ns.yaml
+- myapp-service.yaml
