--- a/cluster1-lbghf/tenants/myapp/kustomization.yaml
+++ b/cluster1-lbghf/tenants/myapp/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- myapp-deployment.yaml
 - myapp-ns.yaml
+- myapp-deployment.yaml
 - myapp-service.yaml
+- myapp-route.yaml
