added project creation
Signed-off-by: Christian Hernandez <chernand@redhat.com>

--- a/cluster1-lbghf/bootstrap/overlays/default/kustomization.yaml
+++ b/cluster1-lbghf/bootstrap/overlays/default/kustomization.yaml
@@ -8,3 +8,4 @@ resources:
 - openshift-gitops-argocd.yaml
 - openshift-gitops-rbac-policy.yaml
 - ../../../components/applicationsets
+- ../../../components/argocdproj
