more testing with appsets
Signed-off-by: Christian Hernandez <chernand@redhat.com>

--- a/cluster1-lbghf/components/applicationsets/core-components-appset.yaml
+++ b/cluster1-lbghf/components/applicationsets/core-components-appset.yaml
@@ -17,7 +17,7 @@ spec:
       project: default
       syncPolicy:
         automated:
-          prune: false
+          prune: true
           selfHeal: true
         retry:
           limit: 15
