--- a/cluster1-lbghf/components/applicationsets/tenants-appset.yaml
+++ b/cluster1-lbghf/components/applicationsets/tenants-appset.yaml
@@ -17,7 +17,7 @@ spec:
       project: default
       syncPolicy:
         automated:
-          prune: false
+          prune: true
           selfHeal: true
         retry:
           limit: 15
