renamed the cluster to be more generic
Signed-off-by: Christian Hernandez <chernand@redhat.com>

--- a/cluster-XXXX/components/applicationsets/tenants-appset.yaml
+++ b/cluster-XXXX/components/applicationsets/tenants-appset.yaml
@@ -9,7 +9,7 @@ spec:
       repoURL: https://github.com/christianh814/test-openshift-go-repo
       revision: main
       directories:
-      - path: cluster1-lbghf/tenants/*
+      - path: cluster-XXXX/tenants/*
   template:
     metadata:
       name: '{{path.basename}}'
