--- a/cluster-XXXX/components/applicationsets/core-components-appset.yaml
+++ b/cluster-XXXX/components/applicationsets/core-components-appset.yaml
@@ -9,7 +9,7 @@ spec:
       repoURL: https://github.com/christianh814/test-openshift-go-repo
       revision: main
       directories:
-      - path: cluster1-lbghf/core/*
+      - path: cluster-XXXX/core/*
   template:
     metadata:
       name: '{{path.basename}}'
