--- a/cluster-XXXX/core/container-security-operator/container-security-operator-sub.yaml
+++ b/cluster-XXXX/core/container-security-operator/container-security-operator-sub.yaml
@@ -4,7 +4,7 @@ metadata:
   name: container-security-operator
   namespace: openshift-operators
 spec:
-  channel: quay-v3.3
+  channel: stable-3.6
   installPlanApproval: Automatic
   name: container-security-operator
   source: redhat-operators
